--- a/style.css
+++ b/style.css
@@ -4,53 +4,43 @@
   box-sizing: border-box;
 }
 
-/** {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  box-sizing: border-box;*/
-/*}*/
+.top, .bottom {
+  width: 960px;
+  margin: 50px auto;
+}
 
-/*main {*/
-/*  width; 960px;*/
-/*  margin: 50px auto;*/
-/*}*/
+.list {
+  padding: 20px;
+  list-style: none;
+}
 
-/*.item-list {*/
-/*  margin-bottom: 50px;*/
-/*}*/
+.list:nth-child(odd) {
+  background-color: #d7d7d7;
+}
 
-/*.item {*/
-/*  list-style: none;*/
-/*  padding: 20px;*/
-/*}*/
+.bottom {
+  /*margin-bottom: 50px;*/
+  display: flex;
+  flex-wrap: wrap;
+}
 
-/*.item:nth-child(odd) {*/
-/*  background-color: #eee;*/
-/*}*/
+.region {
+  width: 30%;
+  height: 200px;
+  background-color: yellow;
+  margin: 0 5% 40px 0;
+}
 
-/*.box-list {*/
-/*  display: flex;*/
-/*  flex-wrap: wrap;*/
-/*}*/
+.region:nth-child(3n) {
+  margin-right: 0;
+}
 
-/*.box {*/
-/*  background-color: #ffd700;*/
-/*  width: 30%;*/
-/*  height: 200px;*/
-/*  margin-right: 5%;*/
-/*  margin-bottom: 40px;*/
-/*}*/
+.region:first-child,
+.region:nth-child(5),
+.region:last-child {
+  background-color: orange;
+}
 
-/*.box:first-child,*/
-/*.box:nth-child(5),*/
-/*.box:last-child {*/
-/*  background-color: #ff8c00;*/
-/*}*/
-
-/*.box:nth-child(3n) {*/
-/*  margin-right: 0;*/
-/*}*/
-
-/*.box:nth-last-child(-n+3) {*/
-/*  margin-bottom: 0;*/
-/*}*/
+.region:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
